// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call close method correctly 1`] = `
Array [
  Array [
    false,
  ],
]
`;

exports[`should render disabled sorting options for visualizations 1`] = `
<div
  className="projects-topbar"
>
  <div
    className="projects-topbar-actions open"
  >
    <a
      className="projects-topbar-button button-icon"
      href="#"
      onClick={[Function]}
    >
      <CloseIcon />
    </a>
    <div
      className="projects-topbar-actions-inner"
    >
      <PerspectiveSelect
        className="projects-topbar-item js-projects-perspective-select"
        view="visualizations"
        visualization="coverage"
      />
      <Tooltip
        overlay="projects.sort.disabled"
        placement="bottom"
      >
        <div>
          <ProjectsSortingSelect
            className="projects-topbar-item js-projects-sorting-select disabled"
            view="visualizations"
          />
        </div>
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`should render option bar closed 1`] = `
<div
  className="projects-topbar"
>
  <div
    className="projects-topbar-actions"
  >
    <a
      className="projects-topbar-button button-icon"
      href="#"
      onClick={[Function]}
    >
      <CloseIcon />
    </a>
    <div
      className="projects-topbar-actions-inner"
    >
      <PerspectiveSelect
        className="projects-topbar-item js-projects-perspective-select"
        view="overall"
      />
      <ProjectsSortingSelect
        className="projects-topbar-item js-projects-sorting-select"
        view="overall"
      />
    </div>
  </div>
</div>
`;

exports[`should render option bar open 1`] = `
<div
  className="projects-topbar"
>
  <div
    className="projects-topbar-actions open"
  >
    <a
      className="projects-topbar-button button-icon"
      href="#"
      onClick={[Function]}
    >
      <CloseIcon />
    </a>
    <div
      className="projects-topbar-actions-inner"
    >
      <PerspectiveSelect
        className="projects-topbar-item js-projects-perspective-select"
        view="leak"
        visualization="risk"
      />
      <ProjectsSortingSelect
        className="projects-topbar-item js-projects-sorting-select"
        view="leak"
      />
    </div>
  </div>
</div>
`;
